--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,13 @@
 services:
   backend:
-    build:
-      context: .
-      dockerfile: Dockerfile
+    build: .
     ports:
       - "8000:8000"
     volumes:
       - ./backend:/app
     environment:
-      - DEBUG=0
+      - DEBUG=1
       - SECRET_KEY=${DJANGO_SECRET_KEY}
       - GOOGLE_CLIENT_ID=${GOOGLE_CLIENT_ID}
       - GOOGLE_CLIENT_SECRET=${GOOGLE_CLIENT_SECRET}
-    command: gunicorn --bind 0.0.0.0:8000 api.wsgi:application
-    restart: unless-stopped
+    command: python manage.py runserver 0.0.0.0:8000
