--- a/.dockerignore
+++ b/.dockerignore
@@ -1,2 +1,23 @@
 *.pyc
-__pycache__
+*.pyo
+*.mo
+*.db
+*.css.map
+*.egg-info
+*.sql.gz
+.cache
+.project
+.idea
+.pydevproject
+.idea/workspace.xml
+.DS_Store
+.git/
+.gitignore
+.env
+.venv
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
+staticfiles
