--- a/nginx.conf
+++ b/nginx.conf
@@ -8,7 +8,22 @@ http {
     }
 
     server {
-        listen 8000 ssl;
+        listen 80;
+        server_name cocinasitinerantes.com www.cocinasitinerantes.com;
+        return 301 https://cocinasitinerantes.com$request_uri;
+    }
+
+    server {
+        listen 443 ssl;
+        server_name www.cocinasitinerantes.com;
+        return 301 https://cocinasitinerantes.com$request_uri;
+
+        ssl_certificate /etc/letsencrypt/live/cocinasitinerantes.com/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/cocinasitinerantes.com/privkey.pem;
+    }
+
+    server {
+        listen 443 ssl;
         server_name cocinasitinerantes.com;
 
         ssl_certificate /etc/letsencrypt/live/cocinasitinerantes.com/fullchain.pem;
@@ -16,7 +31,7 @@ http {
 
         location / {
             proxy_pass http://django;
-            proxy_set_header Host $host:$server_port;
+            proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
