--- a/nginx.conf
+++ b/nginx.conf
@@ -9,17 +9,8 @@ http {
 
     server {
         listen 80;
-        server_name cocinasitinerantes.com www.cocinasitinerantes.com;
-        return 301 https://cocinasitinerantes.com$request_uri;
-    }
-
-    server {
-        listen 443 ssl;
-        server_name www.cocinasitinerantes.com;
-        return 301 https://cocinasitinerantes.com$request_uri;
-
-        ssl_certificate /etc/letsencrypt/live/cocinasitinerantes.com/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/cocinasitinerantes.com/privkey.pem;
+        server_name cocinasitinerantes.com;
+        return 301 https://$server_name:8444$request_uri;  # Changed to :8444
     }
 
     server {
@@ -35,9 +26,6 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_connect_timeout 300s;
-            proxy_send_timeout 300s;
-            proxy_read_timeout 300s;
         }
     }
 }
