--- a/nginx.conf
+++ b/nginx.conf
@@ -1,31 +1,10 @@
-events {
-    worker_connections 1024;
-}
+server {
+    listen 80;
+    server_name localhost;
+    root /usr/share/nginx/html;
+    index index.html;
 
-http {
-    upstream django {
-        server web:8000;
-    }
-
-    server {
-        listen 80;
-        server_name cocinasitinerantes.com;
-        return 301 https://$server_name:8444$request_uri;  # Changed to :8444
-    }
-
-    server {
-        listen 443 ssl;
-        server_name cocinasitinerantes.com;
-
-        ssl_certificate /etc/letsencrypt/live/cocinasitinerantes.com/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/cocinasitinerantes.com/privkey.pem;
-
-        location / {
-            proxy_pass http://django;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-        }
+    location / {
+        try_files $uri $uri/ /index.html;
     }
 }
