nuevo docker compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     volumes:
       - .:/app
       - static_volume:/app/staticfiles
-      - media_volume:/app/media
+      - ./media:/app/media
     env_file:
       - .env
     environment:
@@ -15,4 +15,3 @@ services:
 
 volumes:
   static_volume:
-  media_volume:
